# line-finding

./: .gitignore  LICENSE.txt  README.md  install.sh  mainPASSAGE.py  pyproject.toml
passage_analysis/: .#guis.py  README.md  WISPLFDatabaseManager.py  __init__.py  default.config  find_cwt.py  fitting.py  guis.py  guis_helpers.py  measure_stack.py  measure_z_interactive.py  measure_z_interactive_old.py  mpfit.py  mpfit_old.py  mpfit_py2.py  passage_convert_data.ipynb  stacking.py  trim_spec.py  trim_spec_original_2grism.py  utilities.py
passage_analysis/linelist/: temp
wisp_analysis/: README  README.md  find_cwt.py  fitting.py  gather_secure_sample.py  guis.py  guis_helpers.py  guis_old.py  make_master_stacklist.py  measure_z_interactive.py  mle_stack.py  mpfit.py  passage_convert_data.ipynb  stacking.py  trim_spec.py  utilities.py
